work on consumer producer logger

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "logger": "^0.0.1"
   }
 }
